# ewoksdask

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
doc/: api.rst  conf.py  howtoguides.rst  index.rst  parallel.rst  reference.rst
doc/howtoguides/: index.rst  local_execution.rst  remote_execution.rst
doc/reference/: api.rst  cli.rst
doc/tutorials/: getting_started.rst
ewoksdask/: bindings.py
ewoksdask/tests/: test_dask_job.py  test_examples.py
src/ewoksdask/: bindings.py
src/ewoksdask/tests/: test_examples.py  test_workflow_events.py
