[metadata]
name = ewoksdask
version = attr: ewoksdask.__version__
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = Dask binding for Ewoks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoksdask/
project_urls = 
    Source = https://gitlab.esrf.fr/workflow/ewoks/ewoksdask/
    Documentation = https://ewoksdask.readthedocs.io/
    Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoksdask/issues/
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ewokscore >=0.1.1
    dask[distributed] >=2021.3.0
    dask-jobqueue >=0.7.3

[options.extras_require]
dashboard =
    dask[diagnostics] >=2021.3.0
test =
    pytest >=7
dev =
    %(test)s
    black >=22
    flake8 >=4
doc =
    %(test)s
    sphinx >=4.5

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

[build_sphinx]
project = ewoksdask
version = attr: ewoksdask.__version__
source-dir = ./doc

[coverage:run]
omit =
    setup.py
    */tests/*
